--- a/notespace/frontend/src/components/cards/styles.css
+++ b/notespace/frontend/src/components/cards/styles.css
@@ -1,21 +1,25 @@
-@charset "UTF-8";
-/* Медиа-запросы для различных размеров экрана */
+.noteCard a {
+  top: 0;
+  height: 80%;
+  border: 1px solid black;
+}
+
 @media screen and (max-width: 600px) {
   .noteCard {
-    width: 90%; /* Пример: ширина карточки на узких экранах */
-    height: auto; /* Пример: автоматическая высота для масштабируемости */
+    width: 90%;
+    height: auto;
   }
 }
 @media screen and (min-width: 601px) and (max-width: 1024px) {
   .noteCard {
-    width: 45%; /* Пример: ширина карточки на средних экранах */
-    height: auto; /* Пример: автоматическая высота для масштабируемости */
+    width: 45%;
+    height: auto;
   }
 }
 @media screen and (min-width: 1025px) {
   .noteCard {
-    width: 20%; /* Пример: ширина карточки на больших экранах */
-    height: auto; /* Пример: автоматическая высота для масштабируемости */
+    width: 20%;
+    height: 300px;
   }
 }
 .noteWrapper {
@@ -26,13 +30,7 @@
   align-items: center;
 }
 
-.noteCardTitle {
-  font-weight: bold !important;
-  font-size: 20px !important;
-  color: #962;
-}
-
-.noteCardBody {
-  font-size: 10px;
-  color: #666;
+.noteCardActionArea {
+  top: 0;
+  height: 100%;
 }/*# sourceMappingURL=styles.css.map */
