--- a/notespace/frontend/src/components/cards/styles.css
+++ b/notespace/frontend/src/components/cards/styles.css
@@ -1,36 +1,87 @@
-.noteCard a {
-  top: 0;
-  height: 80%;
+.wrapperNotesAll {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.noteCard {
   border: 1px solid black;
+  transition: transform 0.3s, box-shadow 0.3s;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.cardContentWrapper {
+  flex: 1;
+}
+
+.noteCardActionArea {
+  flex: 8;
+  height: 100%;
+  width: 100%;
+}
+
+.noteCardDeleteButton {
+  width: 100%;
 }
 
 @media screen and (max-width: 600px) {
   .noteCard {
-    width: 90%;
-    height: auto;
+    width: 100%;
+    height: 150px;
+  }
+  .noteCardContent p {
+    font-size: 0.5rem;
+    color: aqua;
+  }
+  .noteCardDeleteButton {
+    height: 7vh;
+  }
+  .noteCardDeleteButton .MuiButton-startIcon .MuiSvgIcon-root {
+    font-size: 0.45rem;
+  }
+  .noteCardDeleteButton {
+    font-size: 0.45rem !important;
+  }
+  .wrapperNotesAll {
+    gap: 15px;
+    margin: 20vh 2vh 2vh 2vh;
   }
 }
 @media screen and (min-width: 601px) and (max-width: 1024px) {
   .noteCard {
     width: 45%;
-    height: auto;
+    height: 200px;
+  }
+  .noteCardContent p {
+    font-size: 0.75rem;
+    color: maroon;
+  }
+  .noteCardDeleteButton {
+    height: 7vh;
+  }
+  .noteCardDeleteButton .MuiButton-startIcon .MuiSvgIcon-root {
+    font-size: 0.65rem;
+  }
+  .noteCardDeleteButton {
+    font-size: 0.65rem !important;
+  }
+  .wrapperNotesAll {
+    gap: 15px;
+    margin: 2vh 2vh 2vh 20vh;
   }
 }
 @media screen and (min-width: 1025px) {
   .noteCard {
-    width: 20%;
+    width: 30%;
     height: 300px;
   }
-}
-.noteWrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 15px;
-  align-items: center;
-}
-
-.noteCardActionArea {
-  top: 0;
-  height: 100%;
+  .noteCardContent p {
+    font-size: 1rem;
+  }
+  .wrapperNotesAll {
+    gap: 30px;
+    margin: 2vh 2vh 2vh 20vh;
+  }
 }/*# sourceMappingURL=styles.css.map */
