--- a/notespace/frontend/src/cards/styles.scss
+++ b/notespace/frontend/src/cards/styles.scss
@@ -1,21 +1,10 @@
 @media screen and (max-width: 600px) {
   .noteCard {
-    width: 100%;
-    height: 150px;
-  }
-  .noteCardContent {
-    p {
-      font-size: 0.5rem;
-    }
+    width: 65vw;
+    height: 65vh;
   }
   .noteCardDeleteButton {
-    height: 7vh;
-  }
-  .noteCardDeleteButton .MuiButton-startIcon .MuiSvgIcon-root {
-    font-size: 0.45rem;
-  }
-  .noteCardDeleteButton {
-    font-size: 0.45rem !important;
+    height: 8vh;
   }
   .wrapperNotesAll {
     gap: 15px;
@@ -25,22 +14,11 @@
 
 @media screen and (min-width: 601px) and (max-width: 1024px) {
   .noteCard {
-    width: 45%;
-    height: 200px;
-  }
-  .noteCardContent {
-    p {
-      font-size: 0.75rem;
-    }
+    width: 35vw;
+    height: 55vh;
   }
   .noteCardDeleteButton {
     height: 7vh;
-  }
-  .noteCardDeleteButton .MuiButton-startIcon .MuiSvgIcon-root {
-    font-size: 0.65rem;
-  }
-  .noteCardDeleteButton {
-    font-size: 0.65rem !important;
   }
   .wrapperNotesAll {
     gap: 15px;
@@ -50,13 +28,8 @@
 
 @media screen and (min-width: 1025px) {
   .noteCard {
-    width: 30%;
-    height: 300px;
-  }
-  .noteCardContent {
-    p {
-      font-size: 1rem;
-    }
+    width: 25vw;
+    height: 40vh;
   }
   .wrapperNotesAll {
     gap: 30px;
@@ -78,4 +51,9 @@
 .noteCardActionArea {
   height: 100%;
   width: 100%;
+}
+
+.noteCardBody {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
