--- a/notespace/frontend/src/components/styles.css
+++ b/notespace/frontend/src/components/styles.css
@@ -1,16 +1,16 @@
 @media screen and (max-width: 600px) {
   .wrapperNoteOne .noteCard {
-    width: 100%;
+    width: 88%;
   }
 }
 @media screen and (min-width: 601px) and (max-width: 1024px) {
   .wrapperNoteOne .noteCard {
-    width: 100%;
+    width: 88%;
   }
 }
 @media screen and (min-width: 1025px) {
   .wrapperNoteOne .noteCard {
-    width: 80%;
+    width: 88%;
   }
 }
 .wrapperFlex {
@@ -25,13 +25,17 @@
   margin: 2vh;
   gap: 25px;
 }
+.wrapperNotesAll .noteCardContent p {
+  font-size: 14px !important;
+}
 
 .wrapperNoteOne {
+  flex-grow: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 .wrapperNoteOne .noteCard {
-  margin: 1vw 0 0 10vw;
+  margin: 1vw 0 1vw 0;
   height: 95vh;
 }/*# sourceMappingURL=styles.css.map */
