--- a/notespace/frontend/src/components/styles.scss
+++ b/notespace/frontend/src/components/styles.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 600px) {
   .wrapperNoteOne {
     .noteCard {
-      width: 100%;
+      width: 88%;
     }
   }
 }
@@ -9,7 +9,7 @@
 @media screen and (min-width: 601px) and (max-width: 1024px) {
   .wrapperNoteOne {
     .noteCard {
-      width: 100%;
+      width: 88%;
     }
   }
 }
@@ -17,7 +17,7 @@
 @media screen and (min-width: 1025px) {
   .wrapperNoteOne {
     .noteCard {
-      width: 80%;
+      width: 88%;
     }
   }
 }
@@ -33,14 +33,18 @@
   flex: 1;
   margin: 2vh;
   gap: 25px;
+  .noteCardContent p {
+    font-size: 14px !important;
+  }
 }
 
 .wrapperNoteOne {
+  flex-grow: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   .noteCard {
-    margin: 1vw 0 0 10vw;
+    margin: 1vw 0 1vw 0;
     height: 95vh;
   }
 }
