--- a/notespace/frontend/src/cards/styles.css
+++ b/notespace/frontend/src/cards/styles.css
@@ -35,9 +35,9 @@
 }
 
 .noteCardBody {
-  -webkit-line-clamp: 6;
+  -webkit-line-clamp: 7;
   padding: 0.5em 0.5em 0 0.5em;
-  height: 100%;
+  height: 65%;
 }
 
 .newNoteBody {
@@ -67,14 +67,9 @@
   .noteCardDeleteButton {
     height: 8vh;
   }
-  .noteCardTitle {
-    -webkit-line-clamp: 1;
-  }
-  .noteCardBody {
-    -webkit-line-clamp: 2;
-  }
   .noteCardBodyTextField {
-    height: 35%;
+    height: 2px;
+    max-height: 2px;
   }
 }
 @media screen and (min-width: 601px) and (max-width: 1024px) {
@@ -85,14 +80,15 @@
   .noteCardDeleteButton {
     height: 7vh;
   }
-  .noteCardTitle {
-    -webkit-line-clamp: 1;
-  }
-  .noteCardBody {
-    -webkit-line-clamp: 5;
-  }
   .noteCardBodyTextField {
-    height: 65%;
+    height: 150px;
+    max-height: 150px;
+  }
+  .noteCardTitle {
+    height: 60px;
+  }
+  textarea {
+    height: 45px;
   }
 }
 @media screen and (min-width: 1025px) {
@@ -100,14 +96,9 @@
     width: 25vw;
     height: 40vh;
   }
-  .noteCardTitle {
-    -webkit-line-clamp: 2;
-  }
-  .noteCardBody {
-    -webkit-line-clamp: 7;
-  }
   .noteCardBodyTextField {
-    height: 85%;
+    height: 350px;
+    max-height: 350px;
   }
 }
 .noteCardTitleTextField,
