--- a/notespace/frontend/src/pages/styles.scss
+++ b/notespace/frontend/src/pages/styles.scss
@@ -15,9 +15,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  .noteCard {
+  .CardNote {
     margin: 1vw 0 1vw 0;
     height: 95vh;
+    width: 75vw;
   }
 }
 
