--- a/notespace/frontend/src/pages/styles.scss
+++ b/notespace/frontend/src/pages/styles.scss
@@ -1,5 +1,10 @@
+:root {
+  --bg-color: #faeee7;
+}
+
 .wrapperFlex {
   display: flex;
+  background-color: var(--bg-color);
 }
 
 .wrapperNotesAll {
