--- a/notespace/frontend/src/cards/styles.css
+++ b/notespace/frontend/src/cards/styles.css
@@ -3,7 +3,6 @@
   --note2-color: #ffc6c7;
   --note3-color: #f9bc60;
   --note4-color: #d9d4e7;
-  --default-color: #ffffff;
 }
 
 .CardNote {
@@ -14,10 +13,15 @@
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
+.CardNoteCreate {
+  background-color: whitesmoke;
+}
+
 .CardNoteHref {
   text-decoration: none;
   color: inherit;
-  height: 86%;
+  height: 90%;
+  position: relative;
 }
 
 .CardContentCreate {
@@ -29,11 +33,11 @@
 .CardContent,
 .CardContentEdit {
   height: 100%;
-  position: relative;
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
   overflow: hidden;
+  position: relative;
   background-color: var(--color1);
 }
 .CardContent p,
@@ -68,7 +72,6 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  border-top: 1px solid black;
 }
 
 .CardContentTitle,
@@ -78,17 +81,33 @@
   font-weight: 600;
 }
 
+.CardContentTitle {
+  padding-top: 4px;
+  position: relative;
+}
+
 .CardContentBody {
   line-height: 1.25;
   flex-grow: 1;
   display: -webkit-box;
-  -webkit-line-clamp: 10;
+  -webkit-line-clamp: 13;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  padding-top: 5px;
+  position: relative;
+  font-size: 14px;
+  height: 100%;
+}
+.CardContentBody h1,
+.CardContentBody h2,
+.CardContentBody h3,
+.CardContentBody h4,
+.CardContentBody h5,
+.CardContentBody h6 {
+  margin-top: 0;
 }
 
 .CardNoteAction {
-  height: 14%;
   position: relative;
   display: flex;
   justify-content: space-around;
@@ -96,6 +115,22 @@
 
 .CardNoteNewHref {
   height: 100%;
+}
+
+.noteCardBodyTextField {
+  position: relative;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.ql-container {
+  position: relative;
+  height: 80%;
+  font-size: 16px;
+}
+
+.ql-toolbar {
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
@@ -127,7 +162,7 @@
 }
 @media screen and (min-width: 1200px) {
   .CardNote {
-    height: 47vh;
+    height: 45vh;
     width: 25vw;
   }
 }/*# sourceMappingURL=styles.css.map */
