--- a/notespace/frontend/src/cards/styles.scss
+++ b/notespace/frontend/src/cards/styles.scss
@@ -3,7 +3,6 @@
   --note2-color: #ffc6c7;
   --note3-color: #f9bc60;
   --note4-color: #d9d4e7;
-  --default-color: #ffffff;
 }
 
 .CardNote {
@@ -14,10 +13,15 @@
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
+.CardNoteCreate {
+  background-color: whitesmoke;
+}
+
 .CardNoteHref {
   text-decoration: none;
   color: inherit;
-  height: 86%;
+  height: 90%;
+  position: relative;
 }
 
 .CardContentCreate {
@@ -29,11 +33,11 @@
 .CardContent,
 .CardContentEdit {
   height: 100%;
-  position: relative;
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
   overflow: hidden;
+  position: relative;
   p {
     padding: 0 9px 0 9px;
     margin: 0;
@@ -67,7 +71,6 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  border-top: 1px solid black;
 }
 
 .CardContentTitle,
@@ -77,17 +80,33 @@
   font-weight: 600;
 }
 
+.CardContentTitle {
+  padding-top: 4px;
+  position: relative;
+}
+
 .CardContentBody {
   line-height: 1.25;
   flex-grow: 1;
   display: -webkit-box;
-  -webkit-line-clamp: 10;
+  -webkit-line-clamp: 13;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  padding-top: 5px;
+  position: relative;
+  font-size: 14px;
+  height: 100%;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0;
+  }
 }
 
 .CardNoteAction {
-  height: 14%;
   position: relative;
   display: flex;
   justify-content: space-around;
@@ -95,6 +114,22 @@
 
 .CardNoteNewHref {
   height: 100%;
+}
+
+.noteCardBodyTextField {
+  position: relative;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.ql-container {
+  position: relative;
+  height: 80%;
+  font-size: 16px;
+}
+
+.ql-toolbar {
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
@@ -129,7 +164,7 @@
 
 @media screen and (min-width: 1200px) {
   .CardNote {
-    height: 47vh;
+    height: 45vh;
     width: 25vw;
   }
 }
