--- a/notespace/frontend/src/navbar/styles.scss
+++ b/notespace/frontend/src/navbar/styles.scss
@@ -1,17 +1,18 @@
 .wrapperNavbar {
-  margin: 1vw 0 1vw 1vw;
-  border: black solid 1px;
+  background-color: #fef6e4;
+  min-height: 100vh;
+  width: 9vw;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
 }
 
 .nav {
   display: flex;
   flex-direction: column;
-}
-
-.nav button {
-  margin: 1vh;
-  width: 90%;
-  max-width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
+  button {
+    width: 100%;
+    justify-content: left;
+    padding: 15px;
+  }
 }
