--- a/notespace/frontend/src/pages/styles.css
+++ b/notespace/frontend/src/pages/styles.css
@@ -20,7 +20,7 @@
   justify-content: center;
   gap: 15px;
   width: 100%;
-  margin-top: 15px;
+  margin: 15px 0 15px 0;
 }
 
 .wrapperNoteOne {
@@ -40,6 +40,10 @@
   text-align: center;
   background-color: #fef6e4;
   padding-bottom: 8px;
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  margin-left: 9vw;
 }
 
 @media screen and (max-width: 767px) {
