NoteCard styles fixed

--- a/notespace/frontend/src/navbar/styles.scss
+++ b/notespace/frontend/src/navbar/styles.scss
@@ -10,7 +10,7 @@
 .nav {
   display: flex;
   flex-direction: column;
-  button {
+  a {
     width: 100%;
     justify-content: left;
     padding: 15px;
