--- a/notespace/frontend/src/navbar/styles.css
+++ b/notespace/frontend/src/navbar/styles.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
 }
-.nav button {
+.nav a {
   width: 100%;
   justify-content: left;
   padding: 15px;
